// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About display About with config null 1`] = `
<div>
  <div
    class="p-3"
  >
    <div
      class="container-fluid"
    >
      <ul
        class="list-group"
      >
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          <img
            alt="logo"
            height="100px"
            src=""
          />
        </a>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Version:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Current directory:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Executable:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Process ID:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Node version:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Hostname:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Operating System:
          </b>
           
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Architecture:
          </b>
        </li>
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          Official site
        </a>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Copyright:
          </b>
        </li>
        <a
          class="list-group-item"
          href="https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt"
        >
          Licensed under the EUPL-1.2-or-later
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`About display page based on config and status 1`] = `
<div>
  <div
    class="p-3"
  >
    <div
      class="container-fluid"
    >
      <ul
        class="list-group"
      >
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          <img
            alt="logo"
            height="100px"
            src=""
          />
        </a>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Version:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Current directory:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Executable:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Process ID:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Node version:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Hostname:
          </b>
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Operating System:
          </b>
           
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Architecture:
          </b>
        </li>
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          Official site
        </a>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Copyright:
          </b>
        </li>
        <a
          class="list-group-item"
          href="https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt"
        >
          Licensed under the EUPL-1.2-or-later
        </a>
      </ul>
    </div>
  </div>
</div>
`;

exports[`About display page based on config and status 2`] = `
<div>
  <div
    class="p-3"
  >
    <div
      class="container-fluid"
    >
      <ul
        class="list-group"
      >
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          <img
            alt="logo"
            height="100px"
            src=""
          />
        </a>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Version:
          </b>
          2.2.2
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Current directory:
          </b>
          C:\\path\\to\\data\\directory
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Executable:
          </b>
          C:\\path\\to\\oibus.exe
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Process ID:
          </b>
          4916
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Node version:
          </b>
          v18.0.0
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Hostname:
          </b>
          EC2AMAZ-OBJ8M6C
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Operating System:
          </b>
          Windows_NT
           
          10.0.14393
        </li>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Architecture:
          </b>
          x64
        </li>
        <a
          class="list-group-item"
          href="https://optimistik.io/oibus"
        >
          Official site
        </a>
        <li
          class="list-group-item"
        >
          <b
            class="me-1"
          >
            Copyright:
          </b>
          (c) Copyright 2019-2022 Optimistik, all rights reserved.
        </li>
        <a
          class="list-group-item"
          href="https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt"
        >
          Licensed under the EUPL-1.2-or-later
        </a>
      </ul>
    </div>
  </div>
</div>
`;
